--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate": "ts-node migrate.ts"
+    "migrate": "ts-node migrate.ts",
+    "migrate-device": "ts-node migrate_device.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
     "@elastic/elasticsearch": "^8.19.1",
+    "axios": "^1.13.2",
     "cli-progress": "^3.12.0",
     "pg": "^8.16.3"
   },
